@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.eclipse.jetty.ee9</groupId>
     <artifactId>jetty-ee9</artifactId>
-    <version>12.0.19-SNAPSHOT</version>
+    <version>12.0.24-SNAPSHOT</version>
   </parent>
   <artifactId>jetty-ee9-servlet</artifactId>
   <name>EE9 :: Servlet</name>
@@ -74,7 +74,6 @@
         <configuration>
           <reuseForks>true</reuseForks>
           <argLine>@{argLine} ${jetty.surefire.argLine}
-            --add-modules org.eclipse.jetty.util.ajax
             --add-reads org.eclipse.jetty.ee9.servlet=org.eclipse.jetty.logging</argLine>
         </configuration>
       </plugin>
